syntax = "proto3";

package ma.project.stubs;
option java_outer_classname = "Bank";


service BankService {
    rpc convert (ConvertCurrencyRequest) returns (ConvertCurrencyResponse) ;
    rpc getCurrencyStream (ConvertCurrencyRequest) returns (stream
            ConvertCurrencyResponse) ;
    rpc performStream (stream ConvertCurrencyRequest) returns
    (ConvertCurrencyResponse) ;
    rpc fullCurrencyStream (stream ConvertCurrencyRequest) returns (stream
            ConvertCurrencyResponse) ;}

message ConvertCurrencyRequest {
    string currency_from = 1;
    string currency_to = 2;
    double amount = 3;
}

message ConvertCurrencyResponse {
    string currency_from = 1;
    string currency_to = 2;
    double amount = 3;
    double result = 4;
}
